--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,8 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,400;500;600;700&display=swap');
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
